java8.spoofax3/test/statics/java/duplicate-declarations/toplevelclass.no.spt
module duplicate-declarations/toplevelclass_no

language metaborg-java

test toplevelclass [[

test;



// error: duplicate class\: A

[A]
public class A {}
public class A {}


]] analysis fails
   run javacFails to ""
